syntax = "proto3";
import "google/protobuf/empty.proto";
package ytsr;
option go_package = "tsuwari/grpc/ytsr";

service Ytsr {
  rpc Search(SearchRequest) returns (SearchResponse) {}
}

message SearchRequest {
  string search = 1;
}

message SongAuthor {
  string name = 1;
  string channelId = 2;
  optional string avatarUrl = 3;
}

message Song {
  string title = 1;
  string id = 2;
  uint64 views = 3;
  uint64 duration = 4;
  optional string thumbnailUrl = 5;
  bool isLive = 6;
  optional SongAuthor author = 7;
}

message SearchResponse {
  repeated Song songs = 1;
}